<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ahmad_yani.dcs_930l.MainActivity" >
    
    <item
        android:id="@+id/action_recorded"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_recorded"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_reconnect"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_logout"/>
    
</menu>
